[package]
name = "import-svn-commits"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.7"
clap = { version = "4.5.7", features = ["derive"] }
email_address = "0.2.4"
git2 = "0.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
roxmltree = "0.20.0"
rpassword = "7.3.1"
secrecy = "0.8.0"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
url = "2.5.2"
